fixes(quiz): ensure line breaks on text and default to start when quiz data is loading

--- a/hosting/src/app/games/quiz/question/question.component.scss
+++ b/hosting/src/app/games/quiz/question/question.component.scss
@@ -13,6 +13,7 @@
 
     &__text {
         margin: 1em 0;
+        width: 100%;
     }
 
     &.saved {
